Fix scrolling issue jumpgagte dropdown (mobile)

--- a/global.css
+++ b/global.css
@@ -1386,6 +1386,10 @@ div#banner_skyscraper {
   align-items: center;
 }
 
+.dropdownList {
+  max-height: none !important;
+}
+
 #fleet3 #roundup .dropdown {
   width: 55px !important;
   justify-self: start;
@@ -5996,7 +6000,7 @@ hr {
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 1000;
+  z-index: 10000000;
 }
 
 .ogl-dialogOverlay.ogl-active {
